# couche-tard-campaign

./: .env.banking  .env.davos  .env.example  .gitignore  Agentic Retail_ Concept. Click. Campaign..md  Dockerfile  GEMINI.md  README.md  bq_product.json  deploy.py  deploy.sh  load_tables.py  pyproject.toml  requirements.txt  test_art_director.py  test_creative_director.py  test_fashion_photographer.py  test_product_trend_mapper.py  test_strategist.py  test_tools.py  test_trend_agent.py  test_trend_spotter.py  verify_product_research.py
app/: agent.py  config.py  main.py  schema.py  schema.py.bak
app/data/: products.json  products.py  schema.py
app/prompts/: art_director copy.md  art_director.md  creative_director.md  graphic_designer.md  greeting.md  instructions.md  product_trend_mapper.md  trend_spotter.md
app/sub_agents/: art_director copy.py  art_director.py  creative_director.py  fashion_photographer.py  (+6 more)
fashion/: agent copy.py  agent.py  config.py  misc.md  registration_config_davos.json  schema.py  verify_brand_data.py
helpers/: load_products.py
retail_ops/: agent.py  config.py  load_tables.py  registration_config.json  registration_config_davos.json  schema.py  verify_brand_data.py
scratch/: download_video.py  download_video_2.py  upload_assets.py
tests/: ask_agent.py  run_storyboard.py  test_art_director.py  test_couche_tard_logic.py  test_creative_director.py  test_product_trend_mapper.py  test_retail_photographer.py  test_strategist.py  test_tools.py  test_trend_agent.py  test_trend_spotter.py  test_veo.py  verify_art_director_refactor.py
(+114 files in other folders)
