[project]
name = "davos-fashion-campaign"
version = "0.1.1"
description = "Davos Fashion Campaign"
authors = [
    {name = "Andrew Turner",email = "andrewturner@google.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk==1.10.0",
    "python-dotenv==1.1.1",
    "google-genai==1.52.0",
    "google-generativeai==0.8.5",
    "google-cloud-aiplatform[adk,agent-engines]==1.132.0",
    "pydantic==2.12.5",
    "lxml==6.0.2",
    "absl-py==2.3.1",
    "pillow==12.0.0",
    "httpx==0.28.1"
]

[tool.poetry]
packages = [
    { include = "fashion" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"